--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 	<body>
 		<h1> Welocme to GIT First Project </h1>
-		<p> GIT - Git is a software used to manage local machine with repo...........................<p>
+		<h2>Project one - Larn Git Commands</h2>
+		<p> GIT - Git is a software used to manage local machine with repo<p>
 	</body>
 </html>
