--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<body>
 		<h1> Welocme to GIT First Project </h1>
 		<h2>Project one - Larn Git Commands</h2>
-		<p> GIT - Git is a software used to manage local machine with repo<p>
+		<p> GIT - Git is a software, It is used to connect github repo<p>
 	</body>
 </html>
