--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<head> index Page </head>
 
 	<body>
-		<h1> Welocme to GIT First Project </h1>
-		<h2>Project one - Larn Git Commands</h2>
+		<h1> Welocme To The GIT First Project </h1>
+		<h2>Project One - Larn Git Commands</h2>
 
 		<p> GIT - Git is a software, It is used to connect github repo<p>
 	</body>
