--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<h1> Welocme To The GIT First Project </h1>
 		<h2>Project One - Larn Git Commands</h2>
 
-		<p> GIT - Git is a software, It is used to connect github repo<p>
+		<p> GIT - Git is a Software, It is used to connect github repo<p>
 	</body>
 </html>
