--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<body>
 		<h1> Welocme To The GIT First Project </h1>
 		<h2>Project One - Larn Git Commands</h2>
-
+		<h3>Heading 3</h3>
 		<p> GIT - Git is a Software, It is used to connect github repo<p>
 	</body>
 </html>
